--- a/Flock/Info.plist
+++ b/Flock/Info.plist
@@ -61,6 +61,8 @@
 	</dict>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Upload Venue Photos</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Allow Flock to use location services to check if you&apos;re in a venue. You can turn this off anytime from your settings in your Profile.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>OpenSans-Regular.ttf</string>
