--- a/Flock/Info.plist
+++ b/Flock/Info.plist
@@ -48,7 +48,7 @@
 	<key>NSContactsUsageDescription</key>
 	<string>Allow Flock to access your contacts so you can add your friends!</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Allow Flock to use location services to check if you&apos;re in a venue. You can turn this off anytime from your settings in your Profile.</string>
+	<string>Allow Flock to use location services to check if you&apos;re in a venue.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Upload Venue Photos</string>
 	<key>UIAppFonts</key>
