--- a/Flock/Info.plist
+++ b/Flock/Info.plist
@@ -45,12 +45,8 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
-	<key>NSContactsUsageDescription</key>
-	<string>Allow Flock to access your contacts so you can add your friends!</string>
 	<key>NSLocationAlwaysUsageDescription</key>
-	<string>Allow Flock to use location services to check if you&apos;re in a venue.</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Upload Venue Photos</string>
+	<string>Allow Flock to use location services to check if you&apos;re at a venue.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>OpenSans-Regular.ttf</string>
@@ -73,8 +69,6 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 </dict>
 </plist>
