--- a/Flock/Info.plist
+++ b/Flock/Info.plist
@@ -66,6 +66,18 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Used in testing files but not in actual app.</string>
+	<key>NSContactsUsageDescription</key>
+	<string>Used in testing files but not in actual app.</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>Used in testing files but not in actual app.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>Used in testing files but not in actual app.</string>
+	<key>NSMotionUsageDescription</key>
+	<string>Used in testing files but not in actual app.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Used in testing files but not in actual app.</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
