--- a/Flock/Info.plist
+++ b/Flock/Info.plist
@@ -52,7 +52,7 @@
 	<key>NSCalendarsUsageDescription</key>
 	<string>Used in testing files but not in actual app.</string>
 	<key>NSContactsUsageDescription</key>
-	<string>Used in testing files but not in actual app.</string>
+	<string>Allow Flock to access your contacts so you can invite people to Flock! Flock never sends invites without your permission.</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Allow Flock to use location services to check if you&apos;re at a venue. Flock always gives you the option to select whether you want to share your location with your friends.</string>
 	<key>NSMicrophoneUsageDescription</key>
