--- a/Flock/Info.plist
+++ b/Flock/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>MGLMapboxAccessToken</key>
+	<string>pk.eyJ1IjoiZmxvY2t0ZWFtIiwiYSI6ImNqNXY0cGIzbzBjaXoycXM4NGdpYjB6bGEifQ.O3FIjcxmCIhsFyk_k755Fg</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
